Bug 134725 - Erratic behaviors in Basic IDE with multiple controls selection
Summary: Erratic behaviors in Basic IDE with multiple controls selection
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: BASIC (show other bugs)
Version:
(earliest affected)
7.0.0.1 rc
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:26.8.0 target:26.2.2
Keywords: bibisected, bisected, regression
: 136287 (view as bug list)
Depends on:
Blocks: BASIC-IDE
  Show dependency treegraph
 
Reported: 2020-07-11 06:20 UTC by blank15927
Modified: 2026-02-25 15:00 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
odt file with dialog box (10.48 KB, application/vnd.oasis.opendocument.text)
2020-12-01 12:30 UTC, blank15927
Details

Note You need to log in before you can comment on or make changes to this bug.
Description blank15927 2020-07-11 06:20:49 UTC
Description:
Dialog box : Some values are automatically reset when you try to set Position X or Y, Width or Height on multiple selections.

Steps to Reproduce:
1. Open the macro Editor
2. Create a dialbox, insert any number of controls, let's say 3 buttons, all with different positions X & Y, width & height.
3. Select the 3 items with the mouse
4a. Try to change Position X or Y to align them perfectly
4b. Or try to change the width or height
5. "Enter" to validate : nothing happens. (Enter key has never worked...)
6. "Tab" to move to another field : nothing happens.
7. When the field loses focus, my input should validate immediately. But it doesn't. I need to click randomly, multiple times, somewhere else, in another field.
8. When at last the command is executed, strange things happen in some other fields, depending on which property I tried to change (?) :
- Position Y or X is set to 0, or
- Width is set to 1, or
- Height is set to 1

Actual Results:
-

Expected Results:
-


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.0.0.1 (x64)
Build ID: 04ba7e3f1e51af6c5d653e543a620e36719083fd
Threads CPU : 8; OS : Windows 10.0 Build 18363; UI Render : Skia/Raster; VCL: win
Locale: fr-FR (fr_FR); Langue IHM : fr-FR
Calc: threaded

OK in 
Version : 6.4.5.2 (x64)
Build ID : a726b36747cf2001e06b58ad5db1aa3a9a1872d6
Threads CPU : 8; OS : Windows 10.0 Build 18363; UI Render : GL; VCL: win; 
Locale : fr-FR (fr_FR); Langue IHM : fr-FR
Calc: CL
Comment 1 blank15927 2020-07-11 06:22:43 UTC
Those are the 4 obvious fields. Other fields (alignment, label, name, etc) seem to be ok but I didn't test them all.
Comment 2 Buovjaga 2020-11-30 14:54:48 UTC
(In reply to blank15927 from comment #0)
> Description:
> Dialog box : Some values are automatically reset when you try to set
> Position X or Y, Width or Height on multiple selections.
> 
> Steps to Reproduce:
> 1. Open the macro Editor
> 2. Create a dialbox, insert any number of controls, let's say 3 buttons, all
> with different positions X & Y, width & height.

Please attach an example file at this step

Set to NEEDINFO.
Change back to UNCONFIRMED after you have provided the document.
Comment 3 blank15927 2020-12-01 12:30:32 UTC
Created attachment 167712 [details]
odt file with dialog box
Comment 4 blank15927 2020-12-01 12:33:55 UTC
Here you go; see attached odt file.

You need to play randomly with the value position x/y to see these erratic behaviors.
Comment 5 Buovjaga 2020-12-03 12:22:17 UTC
Thanks for the file.

(In reply to blank15927 from comment #0)
> Description:
> Dialog box : Some values are automatically reset when you try to set
> Position X or Y, Width or Height on multiple selections.
> 
> Steps to Reproduce:
> 1. Open the macro Editor
> 2. Create a dialbox, insert any number of controls, let's say 3 buttons, all
> with different positions X & Y, width & height.
> 3. Select the 3 items with the mouse
> 4a. Try to change Position X or Y to align them perfectly
> 4b. Or try to change the width or height
> 5. "Enter" to validate : nothing happens. (Enter key has never worked...)
> 6. "Tab" to move to another field : nothing happens.

For me it always updates the view after tabbing.

> 8. When at last the command is executed, strange things happen in some other
> fields, depending on which property I tried to change (?) :
> - Position Y or X is set to 0, or
> - Width is set to 1, or
> - Height is set to 1

I reproduced such: after changing Y position of the 3 buttons at once, I tabbed into the next field and then Shift-tabbed back and then again tabbed. X position was changed to 0 either on the first tabbing or during the back-and-forth.

I bibisected with linux-64-7.0 to https://git.libreoffice.org/core/commit/1efeb17837c22499f00299c033ae59ba3910f7d7
weld Property Browser

Adding Cc: to Caolán McNamara
Comment 6 Aron Budea 2021-01-04 06:55:14 UTC
*** Bug 136287 has been marked as a duplicate of this bug. ***
Comment 7 QA Administrators 2023-01-05 03:20:21 UTC Comment hidden (obsolete, spam)
Comment 8 QA Administrators 2025-11-01 03:12:35 UTC Comment hidden (obsolete)
Comment 9 Commit Notification 2026-02-24 09:40:00 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/31d47a2d703a756768524b62e540019b84b9cb89

Resolves: tdf#134725 Don't signal for empty text

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Caolán McNamara 2026-02-24 09:43:39 UTC
I think what's wrong here is an inconsistency on what to do with "blanked" spinbuttons
Comment 11 Commit Notification 2026-02-25 15:00:38 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/35cc1ae47a2ead7527bed881206a094691c86bc6

Resolves: tdf#134725 Don't signal for empty text

It will be available in 26.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.