Resolves: tdf#134725 Don't signal for empty text

The Formatter has IsEmptyFieldEnabled enabled, so empty values are
intended to be no-change.

Change-Id: Idb91317eda608a477ef480335665591e849a5a69
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/199998
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>
(cherry picked from commit 31d47a2d703a756768524b62e540019b84b9cb89)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/200163
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>